--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   cloud_firestore: ^5.6.9
   loading_indicator: ^3.1.1
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
