--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_auth: ^5.6.0
-  firebase_core: ^3.14.0
+  firebase_auth: ^6.0.0
+  firebase_core: ^4.0.0
   modal_progress_hud_nsn: ^0.5.1
-  cloud_firestore: ^5.6.9
+  cloud_firestore: ^6.0.0
   loading_indicator: ^3.1.1
   flutter_bloc: ^9.1.1
 
@@ -68,7 +68,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/scholar.png
+    - assets/images/
 
 
 
